# Event-Driven-FastAPI-ML-API

./: .gitignore  README.md  convert_image.py  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: auth.py  inference.py  results.py  status.py  user.py
app/celery_tasks/: inference_task.py
app/core/: models.py
app/core/auth/: security.py
app/core/celery_tasks/: inference_task.py
app/core/db/: db.py  models.py
app/core/models/: inference_response.py  job_status.py  result_request.py
app/models/: inference_job.py  inferenceresponse.py  job_status.py  response.py
